terraform/worker2-server/main.tf
resource "aws_instance" "worker2-server" {
  ami                    = "ami-0b6c6ebed2801a5cb"      
  instance_type          = "t3.medium"
  key_name               = "private-key"             
  vpc_security_group_ids = [aws_security_group.worker2-server-sg.id]
  user_data              = templatefile("./install.sh", {})

  tags = {
    Name = "worker2-server"
  }

  root_block_device {
    volume_size = 8
  }
}

resource "aws_security_group" "worker2-server-sg" {
  name        = "worker2-server-sg"
  description = "Allow TLS inbound traffic"

  ingress {
    from_port   = 3000
    to_port     = 10000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 25
    to_port     = 25
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  ingress {
    from_port   = 6443
    to_port     = 6443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 465
    to_port     = 465
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  
  ingress {
    from_port   = 30000
    to_port     = 32767
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "worker2-server-sg"
  }
}
